--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Christmas Cryptographers</title>
+	<title>Christmas Codebusters</title>
 </head>
 
 <body>
 	<div>
-		<a href="./tasks/1.html">Task 1 (2pts)</a>
+		<a href="./tasks/1.html">Task 1 (1pt)</a>
 	</div>
 	<div>
 		<a href="./tasks/2.html">Task 2 (2pts)</a>
@@ -29,9 +29,6 @@
 	</div>
 	<div>
 		<a href="./tasks/7.html">Task 7 (4pts)</a>
-	</div>
-	<div>
-		<a href="./tasks/8.html">Task 8 (4pts)</a>
 	</div>
 </body>
 
