--- a/tasks/2.html
+++ b/tasks/2.html
@@ -5,14 +5,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Task 4: Morse Code</title>
+	<title>Task 2: The Perfect Year</title>
 </head>
 
 <body>
-	<p>Help Santa decode this emergency Morse code broadcast!</p>
-	<audio controls>
-		<source src="../assets/morse_code.wav" type="audio/wav">
-	</audio>
+	<p>Christmas day of 2023 (2023-12-25) falls on a Monday.</p>
+	<p>What is the next year where Christmas day falls on a Monday, given the year has exactly 3 factors?</p>
 </body>
 
 </html>
