--- a/tasks/5.html
+++ b/tasks/5.html
@@ -5,32 +5,28 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Task 3: Rogue Present</title>
+	<title>Task 5: Christmas Tree</title>
 </head>
 
 <body>
-	<p>Open this present!</p>
-	<button id="button">🎁</button>
+	<p>Find what's hidden under this Christmas tree!</p>
+	<a href="../assets/tree.jpg" download>
+		<img src="../assets/tree.jpg" />
+	</a>
+	<p>Click to download the image</p>
 </body>
-
-<script async defer src="../scripts/3.js"></script>
 
 <style>
 	body {
 		margin: 0;
-		width: 100vw;
-		height: 100vh;
-		display: flex;
 	}
 
-	p {
-		margin: auto;
-		padding: 0.5em;
-	}
-
-	#button {
+	#red_nose {
 		position: absolute;
-		font-size: 2em;
+		width: 32px;
+		height: 32px;
+		left: 203px;
+		top: 336px;
 	}
 </style>
 
