--- a/tasks/6.html
+++ b/tasks/6.html
@@ -5,32 +5,25 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Task 3: Rogue Present</title>
+	<title>Task 6: Rudolph the Red-Nosed Reindeer</title>
 </head>
 
 <body>
-	<p>Open this present!</p>
-	<button id="button">🎁</button>
+	<img src="../assets/rudolph.jpg">
+	<img id="red_nose" src="../assets/red_nose.png">
 </body>
-
-<script async defer src="../scripts/3.js"></script>
 
 <style>
 	body {
 		margin: 0;
-		width: 100vw;
-		height: 100vh;
-		display: flex;
 	}
 
-	p {
-		margin: auto;
-		padding: 0.5em;
-	}
-
-	#button {
+	#red_nose {
 		position: absolute;
-		font-size: 2em;
+		width: 32px;
+		height: 32px;
+		left: 203px;
+		top: 336px;
 	}
 </style>
 
